<resources>
    <string name="app_name">Overwatch 2 App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_heroes">All Heroes</string>
    <string name="tanks">Tanks</string>
    <string name="damage">Damage</string>
    <string name="support">Support</string>
    <string name="heroes">Heroes</string>
    <string name="ashe">Ashe</string>
    <string name="image_descr">Image Descr</string>
    <string name="tank">Tank</string>
    <string name="mapas">MAPAS</string>
    <string name="modos">MODOS</string>
    <string name="image_desc">Image Desc</string>
    <string name="king_s_row">KING\'S ROW</string>
    <string name="london">London</string>
    <string name="uk">UK</string>
    <string name="hybrid">Hybrid</string>
    <string name="hybrid2">Hybrid</string>
    <string name="mapas_y_modos">Mapas y Modos</string>
    <string name="london1">London</string>

    <string name="usuarios_titulo">Usuarios</string>
    <string name="description_usuers_text">Este es el buscador de usuarios.\n\nPara encontrar un usuario tienes que poner el nombre de usuario de BattleNet con es número de ID incluio</string>
    <string name="no_hay_usuario">No se ha encontrado ningun usuario.</string>

    <string name="ow">OW</string>

</resources>