<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HeroesFragment" >

    <TextView
        android:id="@+id/heroesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/heroes"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/seleciotnRGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/heroesTextView"
        app:layout_constraintStart_toStartOf="@+id/heroesTextView"
        app:layout_constraintTop_toBottomOf="@+id/heroesTextView">

        <RadioButton
            android:id="@+id/allHeroesRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/all_heroes" />

        <RadioButton
            android:id="@+id/tankRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tank" />

        <RadioButton
            android:id="@+id/damageRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/damage" />

        <RadioButton
            android:id="@+id/supportRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/support" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hereosRecycleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/seleciotnRGroup"
        app:layout_constraintStart_toStartOf="@+id/seleciotnRGroup"
        app:layout_constraintTop_toBottomOf="@+id/seleciotnRGroup"
        tools:listitem="@layout/hero_item" />

</androidx.constraintlayout.widget.ConstraintLayout>