<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapasModosFragment">

    <TextView
        android:id="@+id/mapasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mapas_y_modos"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/selectionRGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/mapasTextView"
        app:layout_constraintStart_toStartOf="@+id/mapasTextView"
        app:layout_constraintTop_toBottomOf="@+id/mapasTextView">

        <RadioButton
            android:id="@+id/mapasRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mapas" />

        <RadioButton
            android:id="@+id/modosRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/modos" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mapasRecycleView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/selectionRGroup"
        app:layout_constraintStart_toStartOf="@+id/selectionRGroup"
        app:layout_constraintTop_toBottomOf="@+id/selectionRGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/modosRecycleView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/selectionRGroup"
        app:layout_constraintStart_toStartOf="@+id/selectionRGroup"
        app:layout_constraintTop_toBottomOf="@+id/selectionRGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>